--- a/MenuManagementMVC/Views/Recipe/Create.cshtml
+++ b/MenuManagementMVC/Views/Recipe/Create.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RecipeMethod, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeMethod, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.RecipeMethod,6,40, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RecipeMethod, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RecipeImageURL, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeImageURL, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.RecipeImageURL, new { type = "file", htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RecipeImageURL, "", new { @class = "text-danger" })
             </div>
         </div>
