--- a/MenuManagementMVC/Content/Site.css
+++ b/MenuManagementMVC/Content/Site.css
@@ -22,3 +22,8 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*This will make the text vertically center in class table*/
+.table tbody tr td {
+     vertical-align: middle;
+}
