--- a/MenuManagementMVC/Views/Recipe/Edit.cshtml
+++ b/MenuManagementMVC/Views/Recipe/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MenuManagementMVC.Models.UserDefined.Recipe
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm("Create", "Recipe", FormMethod.Post,
+@using (Html.BeginForm("Edit", "Recipe", FormMethod.Post,
                             new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
@@ -16,6 +16,8 @@
         <h4>Recipe</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.RecipeId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.RecipeName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -43,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RecipeMethod, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.RecipeMethod,6,40, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RecipeMethod, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RecipeMethod, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +62,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
