--- a/MenuManagementMVC/Views/Ingredient/Create.cshtml
+++ b/MenuManagementMVC/Views/Ingredient/Create.cshtml
@@ -19,9 +19,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Recipe.RecipeName, "Recipe", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-           @Html.DropDownListFor(model => model.RecipeId, (SelectList)ViewBag.Recipes,"--Select--", new { @class = "form-control" })
+           @Html.DropDownListFor(model => model.RecipeId, (SelectList)ViewBag.Recipes, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.RecipeId, "", new { @class = "text-danger" })
-</div>
+        </div>
         </div>
 
 
@@ -37,34 +37,20 @@
             @Html.LabelFor(model => model.IngredientQuantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.IngredientQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.IngredientUnit, (SelectList)ViewBag.Units, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IngredientQuantity, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.IngredientUnit, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IngredientUnit, new { htmlAttributes = new { @class = "form-control" } })
+                
+                @Html.DropDownListFor(model => model.IngredientUnit, (SelectList)ViewBag.Units, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IngredientUnit, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastUpdatedDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastUpdatedDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastUpdatedDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecordStatus, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecordStatus, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecordStatus, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
